fix card hidden behind flag in safari

--- a/components/Intro/Intro.module.css
+++ b/components/Intro/Intro.module.css
@@ -1,37 +1,3 @@
-.single-step-wrapper {
-  height: 100%;
-}
-.single-step {
-  width: 100%;
-  display: inline-block;
-  position: relative;
-  /* border: 1px solid black; */
-}
-.single-first-step {
-  display: inline-block;
-  position: "relative";
-}
-
-.single-step-text {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: rgba(220, 220, 220, 0.7);
-  /* border: 1px solid black; */
-}
-
-.sticky-right-step {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 25%;
-  width: 70%;
-  display: block;
-  margin: 0 auto;
-  height: 100%;
-}
-
-.intro {
-  margin: 3%;
+.fixZ {
+  -webkit-transform: translate3d(0, 0, 0);
 }
